--- a/bookmarklet.html
+++ b/bookmarklet.html
@@ -9,8 +9,8 @@
 <h1>HSBC statement to CSV Bookmarklet for Chrome</h1>
 
 <p>
-<a href="javascript%3Afunction%20loadScript(scriptURL)%7Bvar%20scriptElem%3Ddocument.createElement(%27script%27)%3BscriptElem.setAttribute(%27language%27%2C%27JavaScript%27)%3BscriptElem.setAttribute(%27src%27%2CscriptURL)%3Bdocument.body.appendChild(scriptElem)%3B%7DloadScript(%27%2F%2Fajax.googleapis.com%2Fajax%2Flibs%2Fjquery%2F1.9.1%2Fjquery.min.js%27)%3BloadScript(%27https%3A%2F%2Frawgit.com%2Fwithakay%2Fhsbc-statement-to-csv%2Fmaster%2Fcreate-csv.js%27)%3B">
-Drag this Bookmarklet to your bookmarks
+<a href="javascript:function loadScript(scriptURL){var scriptElem=document.createElement('script');scriptElem.setAttribute('language','JavaScript');scriptElem.setAttribute('src',scriptURL);document.body.appendChild(scriptElem);}loadScript('//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js');loadScript('https://rawgit.com/withakay/hsbc-statement-to-csv/master/create-csv.js');">
+HSBC statement to CSV 
 </a>
 </p>
 
